<resources>
    <string name="app_name">Find me a Seat</string>
    <string name="start_t">HCI SS20 Find me a Seat</string>
    <string name="log_in_t">Anmeldung mit U:Account</string>
    <string name="reg_t">Neues Konto aktivieren</string>
    <string name="start_title">Find me\na\nSeat</string>
    <string name="log_in_text">Hallo du!</string>
    <string name="log_in_hint_1">U:Account</string>
    <string name="log_in_hint_2">Passwort</string>
    <string name="log_in_button_1">Log in</string>
    <string name="register_text">Willkommen</string>
    <string name="reg_hint_1">Benutzername (sichtbar)</string>
    <string name="reg_hint_2">U:Account</string>
    <string name="reg_hint_3">Passwort</string>
    <string name="reg_button">Sign Up</string>
    <string name="title_activity_nav_main">navMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Meine Reservierungen</string>
    <string name="menu_platz_suchen">Platz suchen</string>
    <string name="menu_problem_melden">Problem melden</string>
    <string name="menu_mein_konto">Mein Konto</string>
    <string name="abmelden">Abmelden</string>

    <string name="home_second">Home Second</string>


</resources>
