<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="411dp"
        android:layout_height="284dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"><![CDATA[>

    ]]>

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:src="@drawable/reg_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_alignLeft="@id/myImageView"
            android:layout_alignTop="@id/myImageView"
            android:layout_alignRight="@id/myImageView"
            android:layout_alignBottom="@id/myImageView"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="57dp"
            android:layout_marginRight="-5dp"
            android:layout_marginBottom="94dp"
            android:gravity="center"
            android:shadowColor="#FF0404"
            android:text="@string/register_text"
            android:textColor="#0609F8"
            android:textColorHighlight="#F60808"
            android:textSize="60dp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/reg_hint_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/reg_hint_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="@string/reg_hint_3"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFFFF"
        android:backgroundTint="#2942CD"
        android:onClick="go_main"
        android:text="@string/reg_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>