<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log_in">

<RelativeLayout
android:id="@+id/relativelayout"
android:layout_width="411dp"
android:layout_height="284dp"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"><![CDATA[>

    ]]>

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="277dp"
        android:src="@drawable/log_in_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_alignLeft="@id/myImageView"
        android:layout_alignTop="@id/myImageView"
        android:layout_alignRight="@id/myImageView"
        android:layout_alignBottom="@id/myImageView"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="87dp"
        android:layout_marginRight="-5dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:shadowColor="#FF0404"
        android:text="@string/log_in_text"
        android:textColor="#A6B51B"
        android:textColorHighlight="#F60808"
        android:textSize="60dp" />
</RelativeLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/log_in_hint_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/log_in_hint_2"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="38dp"
        android:background="#FFFF90"
        android:onClick="go_main"
        android:text="@string/log_in_button_1"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


</androidx.constraintlayout.widget.ConstraintLayout>