<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start">

    <Button
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_marginBottom="172dp"
        android:background="#FFFF90"
        android:onClick="go_log_in"
        android:text="@string/log_in_button_1"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="411dp"
        android:layout_height="284dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:src="@drawable/start_1" />

        <TextView
            android:layout_width="410dp"
            android:layout_height="273dp"
            android:layout_alignLeft="@id/myImageView"
            android:layout_alignTop="@id/myImageView"
            android:layout_alignRight="@id/myImageView"
            android:layout_alignBottom="@id/myImageView"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/start_title"
            android:textColor="#000000"
            android:textSize="60dp" />

    </RelativeLayout>

    <Button
        android:layout_width="208dp"
        android:layout_height="64dp"
        android:layout_marginBottom="68dp"
        android:background="#FFFFFF"
        android:backgroundTint="#2942CD"
        android:onClick="go_register"
        android:text="@string/reg_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>